Refactor website structure and enhance content across multiple pages
- Updated header and navigation for consistency across index, publications, research, and service pages.
- Added links to relevant institutions and resources in the "About Me" section on the index page.
- Improved layout and styling in CSS for better visual appeal and mobile optimization.
- Enhanced the "Service and Awards" section with updated roles and responsibilities.
- Added Google Scholar and ORCID links to footer for improved accessibility to academic profiles.

--- a/advising.html
+++ b/advising.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr. Taner Cokyasar | Advising & Mentorship</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dr. Taner Cokyasar | Advising & Mentorship</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<header>
+  <header>
     <h1>Dr. Taner Cokyasar</h1>
     <p>Computational Transportation Engineer | Argonne National Laboratory</p>
-</header>
+  </header>
 
-<nav>
+  <nav>
     <a href="index.html">Home</a>
     <a href="education.html">Education</a>
     <a href="experience.html">Work Experience</a>
+    <a href="teaching.html">Teaching</a>
     <a href="research.html">Research</a>
     <a href="publications.html">Publications</a>
     <a href="service.html">Service and Awards</a>
-    <a href="advising.html">Advising & Mentorship</a>
-</nav>
+    <a href="advising.html" class="active">Advising & Mentorship</a>
+  </nav>
 
-<main class="custom-layout">
+  <main class="custom-layout">
     <h1 style="text-align: center; border-bottom: none; margin-bottom: 30px;">Advising and Mentorship</h1>
     <ul class="styled-list">
       <li>
@@ -53,9 +56,11 @@
         Currently: Ph.D. Student
       </li>
       <li>
-        <strong>2024 &ndash; 2025 | Sadjad Bazarnovi, Ph.D.</strong>, Research Collaborator (My role: Dissertation Co-Advisor)<br>
+        <strong>2024 &ndash; 2025 | Sadjad Bazarnovi, Ph.D.</strong>, Research Collaborator (My role: Dissertation
+        Co-Advisor)<br>
         <em>University of Illinois Chicago</em><br>
-        Dissertation: <em>"Planning and Optimization of Charging Strategies for Electric Vehicles: From Infrastructure to Behavioral Insights."</em><br>
+        Dissertation: <em>"Planning and Optimization of Charging Strategies for Electric Vehicles: From Infrastructure
+          to Behavioral Insights."</em><br>
         Currently: Operations Research Scientist at NetJets
       </li>
       <li>
@@ -79,22 +84,29 @@
         Currently: Quantitative Analytics Specialist at Wells Fargo
       </li>
       <li>
-        <strong>2022 &ndash; 2024 | Amir Davatgari, Ph.D.</strong>, Research Collaborator (My role: Dissertation Co-Advisor)<br>
+        <strong>2022 &ndash; 2024 | Amir Davatgari, Ph.D.</strong>, Research Collaborator (My role: Dissertation
+        Co-Advisor)<br>
         <em>University of Illinois Chicago</em><br>
-        Dissertation: <a href="https://indigo.uic.edu/articles/thesis/Medium-duty_Electric_Vehicle_Infrastructure_Planning_and_Operations_in_Urban_Transportation_Networks/26107309?file=47256694" target="_blank" rel="noopener noreferrer"><em>"Medium-duty Electric Vehicle Infrastructure Planning and Operations in Urban Transportation Networks."</em></a><br>
+        Dissertation: <a
+          href="https://indigo.uic.edu/articles/thesis/Medium-duty_Electric_Vehicle_Infrastructure_Planning_and_Operations_in_Urban_Transportation_Networks/26107309?file=47256694"
+          target="_blank" rel="noopener noreferrer"><em>"Medium-duty Electric Vehicle Infrastructure Planning and
+            Operations in Urban Transportation Networks."</em></a><br>
         Currently: Data Scientist at Starbucks
       </li>
     </ul>
-</main>
+  </main>
 
-<footer>
+  <footer>
     <p>9700 South Cass Ave | Lemont, IL 60439 | (706)-308-1492</p>
     <p>
-        <a href="https://linkedin.com/in/taner-cokyasar/" target="_blank">LinkedIn</a> | 
-        <a href="https://github.com/tcokyasar44" target="_blank">GitHub</a> | 
-        <a href="mailto:tcokyasar@anl.gov">tcokyasar@anl.gov</a>
+      <a href="https://linkedin.com/in/taner-cokyasar/" target="_blank">LinkedIn</a> |
+      <a href="https://github.com/tcokyasar44" target="_blank">GitHub</a> |
+      <a href="https://scholar.google.com/citations?user=rZDwSd0AAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a> |
+      <a href="https://orcid.org/0000-0001-9687-6725" target="_blank">ORCID</a> |
+      <a href="mailto:tcokyasar@anl.gov">tcokyasar@anl.gov</a>
     </p>
-</footer>
+  </footer>
 
 </body>
+
 </html>
