--- a/publications.html
+++ b/publications.html
@@ -1,52 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dr. Taner Cokyasar | Publications</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<header>
-    <h1>Dr. Taner Cokyasar</h1>
-    <p>Computational Transportation Engineer | Argonne National Laboratory</p>
-</header>
+    <header>
+        <h1>Dr. Taner Cokyasar</h1>
+        <p>Computational Transportation Engineer | Argonne National Laboratory</p>
+    </header>
 
-<nav>
-    <a href="index.html">Home</a>
-    <a href="education.html">Education</a>
-    <a href="experience.html">Work Experience</a>
-    <a href="research.html">Research</a>
-    <a href="publications.html">Publications</a>
-    <a href="service.html">Service and Awards</a>
-    <a href="advising.html">Advising & Mentorship</a>
-</nav>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="education.html">Education</a>
+        <a href="experience.html">Work Experience</a>
+        <a href="teaching.html">Teaching</a>
+        <a href="research.html">Research</a>
+        <a href="publications.html" class="active">Publications</a>
+        <a href="service.html">Service and Awards</a>
+        <a href="advising.html">Advising & Mentorship</a>
+    </nav>
 
-<main class="custom-layout">
-    <h1 style="text-align: center; border-bottom: none; margin-bottom: 30px;">Research Publications and Presentations</h1>
-    
-    <h2>Journal Articles (*Corresponding Author)</h2>
-    <script src="https://bibbase.org/show?bib=https%3A%2F%2Fwww.dropbox.com%2Fscl%2Ffi%2Fr7a96oa7h2epkbtx9i3gj%2Fjournal_articles.bib%3Frlkey%3Di7n06rxxkldh5u4zx6jmlhqj9%26st%3Dpcgen67c%26dl%3D1&commas=true&noBootstrap=1&jsonp=1"></script>
+    <main class="custom-layout">
+        <h1 style="text-align: center; border-bottom: none; margin-bottom: 30px;">Research Publications and
+            Presentations</h1>
 
-    <h2>In Progress and Submitted Manuscripts</h2>
-    <script src="https://bibbase.org/show?bib=https%3A%2F%2Fwww.dropbox.com%2Fscl%2Ffi%2F2nwsjcpbzpyn0h02h68ea%2Fwork_in_progress.bib%3Frlkey%3Dc4x7asypxegc0uoy0k4u9xyvk%26st%3Dpbf6x2kz%26dl%3D1&commas=true&noBootstrap=1&jsonp=1"></script>
+        <h2>Journal Articles (*Corresponding Author)</h2>
+        <script
+            src="https://bibbase.org/show?bib=https%3A%2F%2Fwww.dropbox.com%2Fscl%2Ffi%2Fr7a96oa7h2epkbtx9i3gj%2Fjournal_articles.bib%3Frlkey%3Di7n06rxxkldh5u4zx6jmlhqj9%26st%3Dpcgen67c%26dl%3D1&commas=true&noBootstrap=1&jsonp=1"></script>
 
-    <h2>Conference Articles</h2>
-    <script src="https://bibbase.org/show?bib=https%3A%2F%2Fwww.dropbox.com%2Fscl%2Ffi%2Fdr6gruw3yekkwb1wst4xz%2Fconference_articles.bib%3Frlkey%3D7gn6rj988kfzplpok24pdhx2x%26st%3Dp4mqs1wt%26dl%3D1&commas=true&noBootstrap=1&jsonp=1"></script>
+        <h2>In Progress and Submitted Manuscripts</h2>
+        <script
+            src="https://bibbase.org/show?bib=https%3A%2F%2Fwww.dropbox.com%2Fscl%2Ffi%2F2nwsjcpbzpyn0h02h68ea%2Fwork_in_progress.bib%3Frlkey%3Dc4x7asypxegc0uoy0k4u9xyvk%26st%3Dpbf6x2kz%26dl%3D1&commas=true&noBootstrap=1&jsonp=1"></script>
 
-    <h2>Conference Presentations</h2>
-    <script src="https://bibbase.org/show?bib=https%3A%2F%2Fwww.dropbox.com%2Fscl%2Ffi%2Foysukwvkwpj8fhvaof6ij%2Fconference_presentations.bib%3Frlkey%3Dw7ijd6pdo29vapvsug0ba72b9%26st%3Drxa7fqbv%26dl%3D1&commas=true&noBootstrap=1&jsonp=1"></script>
-</main>
+        <h2>Conference Articles</h2>
+        <script
+            src="https://bibbase.org/show?bib=https%3A%2F%2Fwww.dropbox.com%2Fscl%2Ffi%2Fdr6gruw3yekkwb1wst4xz%2Fconference_articles.bib%3Frlkey%3D7gn6rj988kfzplpok24pdhx2x%26st%3Dp4mqs1wt%26dl%3D1&commas=true&noBootstrap=1&jsonp=1"></script>
 
-<footer>
-    <p>9700 South Cass Ave | Lemont, IL 60439 | (706)-308-1492</p>
-    <p>
-        <a href="https://linkedin.com/in/taner-cokyasar/" target="_blank">LinkedIn</a> | 
-        <a href="https://github.com/tcokyasar44" target="_blank">GitHub</a> | 
-        <a href="mailto:tcokyasar@anl.gov">tcokyasar@anl.gov</a>
-    </p>
-</footer>
+        <h2>Conference Presentations</h2>
+        <script
+            src="https://bibbase.org/show?bib=https%3A%2F%2Fwww.dropbox.com%2Fscl%2Ffi%2Foysukwvkwpj8fhvaof6ij%2Fconference_presentations.bib%3Frlkey%3Dw7ijd6pdo29vapvsug0ba72b9%26st%3Drxa7fqbv%26dl%3D1&commas=true&noBootstrap=1&jsonp=1"></script>
+    </main>
+
+    <footer>
+        <p>9700 South Cass Ave | Lemont, IL 60439 | (706)-308-1492</p>
+        <p>
+            <a href="https://linkedin.com/in/taner-cokyasar/" target="_blank">LinkedIn</a> |
+            <a href="https://github.com/tcokyasar44" target="_blank">GitHub</a> |
+            <a href="https://scholar.google.com/citations?user=rZDwSd0AAAAJ&hl=en&oi=ao" target="_blank">Google
+                Scholar</a> |
+            <a href="https://orcid.org/0000-0001-9687-6725" target="_blank">ORCID</a> |
+            <a href="mailto:tcokyasar@anl.gov">tcokyasar@anl.gov</a>
+        </p>
+    </footer>
 
 </body>
+
 </html>
