--- a/research.html
+++ b/research.html
@@ -1,63 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dr. Taner Cokyasar | Research</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<header>
-    <h1>Dr. Taner Cokyasar</h1>
-    <p>Computational Transportation Engineer | Argonne National Laboratory</p>
-</header>
+    <header>
+        <h1>Dr. Taner Cokyasar</h1>
+        <p>Computational Transportation Engineer | Argonne National Laboratory</p>
+    </header>
 
-<nav>
-    <a href="index.html">Home</a>
-    <a href="education.html">Education</a>
-    <a href="experience.html">Work Experience</a>
-    <a href="research.html">Research</a>
-    <a href="publications.html">Publications</a>
-    <a href="service.html">Service and Awards</a>
-    <a href="advising.html">Advising & Mentorship</a>
-</nav>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="education.html">Education</a>
+        <a href="experience.html">Work Experience</a>
+        <a href="teaching.html">Teaching</a>
+        <a href="research.html" class="active">Research</a>
+        <a href="publications.html">Publications</a>
+        <a href="service.html">Service and Awards</a>
+        <a href="advising.html">Advising & Mentorship</a>
+    </nav>
 
-<main class="custom-layout">
-    <h1 style="text-align: center; border-bottom: none; margin-bottom: 30px;">Research</h1>
+    <main class="custom-layout">
+        <h1 style="text-align: center; border-bottom: none; margin-bottom: 30px;">Research</h1>
 
-    <p style="font-size: 1.1em; margin-bottom: 40px;">My research focuses on developing advanced computational methods and optimization models to improve transportation systems’ efficiency and resilience. I integrate operations research, transportation science, energy systems, and data analytics to address complex challenges faced by modern urban mobility and freight logistics.</p>
+        <p style="font-size: 1.1em; margin-bottom: 40px;">My research focuses on developing advanced computational
+            methods and optimization models to improve transportation systems’ efficiency and resilience. I integrate
+            operations research, transportation science, energy systems, and data analytics to address complex
+            challenges faced by modern urban mobility and freight logistics.</p>
 
-    <h2>Research Interests</h2>
+        <h2>Research Interests</h2>
 
-    <ul class="styled-list">
-        <li>
-            <strong>Transportation Systems Modeling &amp; Optimization</strong><br>
-            Designing and applying mathematical and computational models to optimize location, routing, scheduling, and resource allocation in transportation networks. This includes innovative approaches for vehicle routing problems, electric vehicle charging, and last-mile delivery logistics.
-        </li>
-        <li>
-            <strong>Energy-Efficient Mobility</strong><br>
-            Investigating the integration of electric and alternative fuel vehicles within transportation systems, focusing on energy consumption minimization, infrastructure planning, and economic impact assessment.
-        </li>
-        <li>
-            <strong>Freight and Public Transit Systems</strong><br>
-            Developing data-driven models to optimize freight movement and public transit operations, improving service reliability, cost-effectiveness, and overall system performance.
-        </li>
-        <li>
-            <strong>Data Analytics &amp; Simulation for Transportation</strong><br>
-            Leveraging large-scale datasets and simulation techniques to evaluate transportation policies, infrastructure investments, and emerging mobility technologies.
-        </li>
-    </ul>
-</main>
+        <ul class="styled-list">
+            <li>
+                <strong>Transportation Systems Modeling &amp; Optimization</strong><br>
+                Designing and applying mathematical and computational models to optimize location, routing, scheduling,
+                and resource allocation in transportation networks. This includes innovative approaches for vehicle
+                routing problems, electric vehicle charging, and last-mile delivery logistics.
+            </li>
+            <li>
+                <strong>Energy-Efficient Mobility</strong><br>
+                Investigating the integration of electric and alternative fuel vehicles within transportation systems,
+                focusing on energy consumption minimization, infrastructure planning, and economic impact assessment.
+            </li>
+            <li>
+                <strong>Freight and Public Transit Systems</strong><br>
+                Developing data-driven models to optimize freight movement and public transit operations, improving
+                service reliability, cost-effectiveness, and overall system performance.
+            </li>
+            <li>
+                <strong>Data Analytics &amp; Simulation for Transportation</strong><br>
+                Leveraging large-scale datasets and simulation techniques to evaluate transportation policies,
+                infrastructure investments, and emerging mobility technologies.
+            </li>
+        </ul>
+    </main>
 
-<footer>
-    <p>9700 South Cass Ave | Lemont, IL 60439 | (706)-308-1492</p>
-    <p>
-        <a href="https://linkedin.com/in/taner-cokyasar/" target="_blank">LinkedIn</a> | 
-        <a href="https://github.com/tcokyasar44" target="_blank">GitHub</a> | 
-        <a href="mailto:tcokyasar@anl.gov">tcokyasar@anl.gov</a>
-    </p>
-</footer>
+    <footer>
+        <p>9700 South Cass Ave | Lemont, IL 60439 | (706)-308-1492</p>
+        <p>
+            <a href="https://linkedin.com/in/taner-cokyasar/" target="_blank">LinkedIn</a> |
+            <a href="https://github.com/tcokyasar44" target="_blank">GitHub</a> |
+            <a href="https://scholar.google.com/citations?user=rZDwSd0AAAAJ&hl=en&oi=ao" target="_blank">Google
+                Scholar</a> |
+            <a href="https://orcid.org/0000-0001-9687-6725" target="_blank">ORCID</a> |
+            <a href="mailto:tcokyasar@anl.gov">tcokyasar@anl.gov</a>
+        </p>
+    </footer>
 
 </body>
+
 </html>
