--- a/service.html
+++ b/service.html
@@ -1,95 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dr. Taner Cokyasar | Service and Awards</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<header>
-    <h1>Dr. Taner Cokyasar</h1>
-    <p>Computational Transportation Engineer | Argonne National Laboratory</p>
-</header>
+    <header>
+        <h1>Dr. Taner Cokyasar</h1>
+        <p>Computational Transportation Engineer | Argonne National Laboratory</p>
+    </header>
 
-<nav>
-    <a href="index.html">Home</a>
-    <a href="education.html">Education</a>
-    <a href="experience.html">Work Experience</a>
-    <a href="research.html">Research</a>
-    <a href="publications.html">Publications</a>
-    <a href="service.html">Service and Awards</a>
-    <a href="advising.html">Advising & Mentorship</a>
-</nav>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="education.html">Education</a>
+        <a href="experience.html">Work Experience</a>
+        <a href="teaching.html">Teaching</a>
+        <a href="research.html">Research</a>
+        <a href="publications.html">Publications</a>
+        <a href="service.html" class="active">Service and Awards</a>
+        <a href="advising.html">Advising & Mentorship</a>
+    </nav>
 
-<main class="custom-layout">
-    <h1 style="text-align: center; border-bottom: none; margin-bottom: 30px;">Service and Awards</h1>
+    <main class="custom-layout">
+        <h1 style="text-align: center; border-bottom: none; margin-bottom: 30px;">Service and Awards</h1>
 
-    <h2>Professional Service</h2>
-    
-    <h3>Editorial Service</h3>
-    <ul class="styled-list">
-        <li><strong>2025–Present</strong> | Area Editor of Infrastructure Economics for <a href="https://www.tandfonline.com/journals/utee20/about-this-journal#editorial-board" target="_blank"><em>The Engineering Economist</em></a></li>
-        <li><strong>2021–2022</strong> | Editorial Board Member – <em>International Journal of Applied Management Science (IJAMS)</em></li>
-    </ul>
+        <h2>Professional Service</h2>
 
-    <h3>Society Leadership</h3>
-    <ul class="styled-list">
-        <li><strong>2025-2027</strong> | President – IISE Engineering Economy Division</li>
-        <li><strong>2023–2025</strong> | Director – IISE Logistics and Supply Chain Division</li>
-        <li><strong>2022–2024</strong> | Director – IISE Engineering Economy Division</li>
-        <li><strong>2019–2021</strong> | President – IISE Logistics and Supply Chain Division Student Leadership Board</li>
-        <li><strong>2018–2019</strong> | Vice President – IISE Logistics and Supply Chain Division Student Leadership Board</li>
-    </ul>
+        <h3>Editorial Service</h3>
+        <ul class="styled-list">
+            <li><strong>2025–Present</strong> | Area Editor of Infrastructure Economics for <a
+                    href="https://www.tandfonline.com/journals/utee20/about-this-journal#editorial-board"
+                    target="_blank"><em>The Engineering Economist</em></a></li>
+            <li><strong>2021–2022</strong> | Editorial Board Member – <em>International Journal of Applied Management
+                    Science (IJAMS)</em></li>
+        </ul>
 
-    <h3>Conference Organization</h3>
-    <ul class="styled-list">
-        <li><strong>2026</strong> | Track Chair – IISE Annual Meeting &amp; Expo (Engineering Economy)</li>
-        <li><strong>2025</strong> | Track Chair – IISE Annual Meeting &amp; Expo (Engineering Economy, Facilities Design &amp; Planning)</li>
-        <li><strong>2024</strong> | Track Chair – IISE Annual Meeting &amp; Expo (Engineering Economy), Mobi-SPC (Smart Cities and Ubiquitous Climate Change Management)</li>
-        <li><strong>2023</strong> | Track Chair – IISE Annual Meeting &amp; Expo, EUSPN (Adaptive Systems, Intelligent Computing and Applications)</li>
-    </ul>
+        <h3>Society Leadership</h3>
+        <ul class="styled-list">
+            <li><strong>Present</strong> | President – IISE Engineering Economy Division</li>
+            <li><strong>2023–2025</strong> | Director – IISE Logistics and Supply Chain Division</li>
+            <li><strong>2022–2024</strong> | Director – IISE Engineering Economy Division</li>
+            <li><strong>2019–2021</strong> | President – IISE Logistics and Supply Chain Division Student Leadership
+                Board</li>
+            <li><strong>2018–2019</strong> | Vice President – IISE Logistics and Supply Chain Division Student
+                Leadership Board</li>
+        </ul>
 
-    <h3>Peer Review Activities</h3>
-    <ul class="styled-list">
-        <li><strong>Ad-hoc Reviewer:</strong> Transportation Research Part A: Policy and Practice, Transportation Research Part B: Methodological, Transportation Research Part C: Emerging Technologies, Transportation Research Board, Transportation Research Record, Institute of Industrial and Systems Engineers, IEEE Transactions on Engineering Management, IEEE Intelligent Transportation Systems Conference, Computers &amp; Operations Research, International Journal of Sustainable Transportation, Transportation Letters</li>
-    </ul>
+        <h3>Conference Organization</h3>
+        <ul class="styled-list">
+            <li><strong>2026</strong> | Track Chair – IISE Annual Meeting &amp; Expo (Engineering Economy)</li>
+            <li><strong>2025</strong> | Track Chair – IISE Annual Meeting &amp; Expo (Engineering Economy, Facilities
+                Design &amp; Planning)</li>
+            <li><strong>2024</strong> | Track Chair – IISE Annual Meeting &amp; Expo (Engineering Economy), Mobi-SPC
+                (Smart Cities and Ubiquitous Climate Change Management)</li>
+            <li><strong>2023</strong> | Track Chair – IISE Annual Meeting &amp; Expo, EUSPN (Adaptive Systems,
+                Intelligent Computing and Applications)</li>
+        </ul>
 
-    <h3>Professional Memberships</h3>
-    <ul class="styled-list">
-        <li><strong>2018–Present</strong> | Member – INFORMS</li>
-        <li><strong>2016–Present</strong> | Member – IISE</li>
-    </ul>
+        <h3>Peer Review Activities</h3>
+        <ul class="styled-list">
+            <li><strong>Ad-hoc Reviewer:</strong> Transportation Research Part A: Policy and Practice, Transportation
+                Research Part B: Methodological, Transportation Research Part C: Emerging Technologies, Transportation
+                Research Board, Transportation Research Record, Institute of Industrial and Systems Engineers, IEEE
+                Transactions on Engineering Management, IEEE Intelligent Transportation Systems Conference, Computers
+                &amp; Operations Research, International Journal of Sustainable Transportation, Transportation Letters
+            </li>
+        </ul>
 
-    <h2>Honors and Awards</h2>
-    
-    <h3>Professional & Academic Honors</h3>
-    <ul class="styled-list">
-        <li><strong>2024</strong> | Impact Argonne Award – Argonne National Laboratory</li>
-        <li><strong>2018</strong> | Best Track Paper Award – IISE (Spare Parts + Additive Manufacturing), Cokyasar et al.</li>
-        <li><strong>2018</strong> | 2nd Best Track Paper Award – IISE Engineering Management Division, Cokyasar et al.</li>
-        <li><strong>2018</strong> | Extraordinary Professional Promise Award – University of Tennessee</li>
-        <li><strong>2017</strong> | Service Recognition Award – University of Tennessee</li>
-    </ul>
+        <h3>Professional Memberships</h3>
+        <ul class="styled-list">
+            <li><strong>2018–Present</strong> | Member – INFORMS</li>
+            <li><strong>2016–Present</strong> | Member – IISE</li>
+        </ul>
 
-    <h3>Fellowships & Scholarships</h3>
-    <ul class="styled-list">
-        <li><strong>2019–2020</strong> | E.J. Sierleja Memorial Fellowship – IISE</li>
-        <li><strong>2017–2019</strong> | Helen Jubin Fellowship Award – University of Tennessee</li>
-        <li><strong>2013–2020</strong> | Graduate Fellowship Award – Republic of Turkey Ministry of National Education</li>
-        <li><strong>2008–2012</strong> | Undergraduate Fellowship – Renaissance Education Foundation</li>
-    </ul>
-</main>
+        <h2>Honors and Awards</h2>
 
-<footer>
-    <p>9700 South Cass Ave | Lemont, IL 60439 | (706)-308-1492</p>
-    <p>
-        <a href="https://linkedin.com/in/taner-cokyasar/" target="_blank">LinkedIn</a> | 
-        <a href="https://github.com/tcokyasar44" target="_blank">GitHub</a> | 
-        <a href="mailto:tcokyasar@anl.gov">tcokyasar@anl.gov</a>
-    </p>
-</footer>
+        <h3>Professional & Academic Honors</h3>
+        <ul class="styled-list">
+            <li><strong>2024</strong> | Impact Argonne Award – Argonne National Laboratory</li>
+            <li><strong>2018</strong> | Best Track Paper Award – IISE (Spare Parts + Additive Manufacturing), Cokyasar
+                et al.</li>
+            <li><strong>2018</strong> | 2nd Best Track Paper Award – IISE Engineering Management Division, Cokyasar et
+                al.</li>
+            <li><strong>2018</strong> | Extraordinary Professional Promise Award – University of Tennessee</li>
+            <li><strong>2017</strong> | Service Recognition Award – University of Tennessee</li>
+        </ul>
+
+        <h3>Fellowships & Scholarships</h3>
+        <ul class="styled-list">
+            <li><strong>2019–2020</strong> | E.J. Sierleja Memorial Fellowship – IISE</li>
+            <li><strong>2017–2019</strong> | Helen Jubin Fellowship Award – University of Tennessee</li>
+            <li><strong>2013–2020</strong> | Graduate Fellowship Award – Republic of Turkey Ministry of National
+                Education</li>
+            <li><strong>2008–2012</strong> | Undergraduate Fellowship – Renaissance Education Foundation</li>
+        </ul>
+    </main>
+
+    <footer>
+        <p>9700 South Cass Ave | Lemont, IL 60439 | (706)-308-1492</p>
+        <p>
+            <a href="https://linkedin.com/in/taner-cokyasar/" target="_blank">LinkedIn</a> |
+            <a href="https://github.com/tcokyasar44" target="_blank">GitHub</a> |
+            <a href="https://scholar.google.com/citations?user=rZDwSd0AAAAJ&hl=en&oi=ao" target="_blank">Google
+                Scholar</a> |
+            <a href="https://orcid.org/0000-0001-9687-6725" target="_blank">ORCID</a> |
+            <a href="mailto:tcokyasar@anl.gov">tcokyasar@anl.gov</a>
+        </p>
+    </footer>
 
 </body>
+
 </html>
