--- a/education.html
+++ b/education.html
@@ -1,63 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dr. Taner Cokyasar | Education</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<header>
-    <h1>Dr. Taner Cokyasar</h1>
-    <p>Computational Transportation Engineer | Argonne National Laboratory</p>
-</header>
+    <header>
+        <h1>Dr. Taner Cokyasar</h1>
+        <p>Computational Transportation Engineer | Argonne National Laboratory</p>
+    </header>
 
-<nav>
-    <a href="index.html">Home</a>
-    <a href="education.html">Education</a>
-    <a href="experience.html">Work Experience</a>
-    <a href="research.html">Research</a>
-    <a href="publications.html">Publications</a>
-    <a href="service.html">Service and Awards</a>
-    <a href="advising.html">Advising & Mentorship</a>
-</nav>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="education.html" class="active">Education</a>
+        <a href="experience.html">Work Experience</a>
+        <a href="teaching.html">Teaching</a>
+        <a href="research.html">Research</a>
+        <a href="publications.html">Publications</a>
+        <a href="service.html">Service and Awards</a>
+        <a href="advising.html">Advising & Mentorship</a>
+    </nav>
 
-<main class="custom-layout">
-    <h1 style="text-align: center; border-bottom: none; margin-bottom: 30px;">Education</h1>
+    <main class="custom-layout">
+        <h1 style="text-align: center; border-bottom: none; margin-bottom: 30px;">Education</h1>
 
-    <ul class="styled-list">
-        <li>
-            <strong>Ph.D. in Industrial Engineering</strong> (May 2020)<br>
-            <em>The University of Tennessee, Knoxville, TN, USA.</em>
-            <ul>
-                <li>Dissertation: <a href="https://trace.tennessee.edu/cgi/viewcontent.cgi?params=/context/utk_graddiss/article/7685/&path_info=utk.ir.td_13642.pdf" target="_blank">Economic Feasibility of Adopting Additive Manufacturing for Low-volume Demand</a></li>
-                <li>Committee: <a href="https://tickle.utk.edu/ise/faculty/mingzhou-jin/" target="_blank">Mingzhou Jin</a> (advisor), <a href="https://haslam.utk.edu/people/profile/sean-willems/" target="_blank">Sean Willems</a>, <a href="https://tickle.utk.edu/ise/faculty/xueping-li/" target="_blank">Xueping Li</a>, <a href="https://tickle.utk.edu/ise/faculty/james-ostrowski/" target="_blank">James Ostrowski</a></li>
-            </ul>
-        </li>
-        <li>
-            <strong>M.S. in Industrial Engineering</strong> (December 2016)<br>
-            <em>The University of Tennessee, Knoxville, TN, USA.</em>
-            <ul>
-                <li>Thesis: <a href="https://trace.tennessee.edu/cgi/viewcontent.cgi?article=5503&context=utk_gradthes&httpsredir=1" target="_blank">A Mixed Integer Linear Programming Approach for Developing Salary Administration Systems</a></li>
-                <li>Committee: <a href="https://tickle.utk.edu/ise/faculty/emeritus-faculty/alberto-garcia-diaz/" target="_blank">Alberto Garcia-Diaz</a> (advisor), <a href="https://experts.utk.edu/experts/john-kobza/" target="_blank">John Kobza</a>, <a href="https://tickle.utk.edu/ise/remembering-rupy-sawhney/" target="_blank">Rapinder Sawhney</a></li>
-            </ul>
-        </li>
-        <li>
-            <strong>B.S. in Business Administration</strong> (June 2012)<br>
-            <em>Nevsehir University, Türkiye.</em>
-        </li>
-    </ul>
-</main>
+        <ul class="styled-list">
+            <li>
+                <strong>Ph.D. in Industrial Engineering</strong> (May 2020)<br>
+                <em><a href="https://www.utk.edu/" target="_blank">The University of Tennessee</a>, Knoxville, TN,
+                    USA.</em>
+                <ul>
+                    <li>Dissertation: <a
+                            href="https://trace.tennessee.edu/cgi/viewcontent.cgi?params=/context/utk_graddiss/article/7685/&path_info=utk.ir.td_13642.pdf"
+                            target="_blank">Economic Feasibility of Adopting Additive Manufacturing for Low-volume
+                            Demand</a></li>
+                    <li>Committee: <a href="https://tickle.utk.edu/ise/faculty/mingzhou-jin/" target="_blank">Mingzhou
+                            Jin</a> (advisor), <a href="https://haslam.utk.edu/people/profile/sean-willems/"
+                            target="_blank">Sean Willems</a>, <a href="https://tickle.utk.edu/ise/faculty/xueping-li/"
+                            target="_blank">Xueping Li</a>, <a
+                            href="https://tickle.utk.edu/ise/faculty/james-ostrowski/" target="_blank">James
+                            Ostrowski</a></li>
+                </ul>
+            </li>
+            <li>
+                <strong>M.S. in Industrial Engineering</strong> (December 2016)<br>
+                <em><a href="https://www.utk.edu/" target="_blank">The University of Tennessee</a>, Knoxville, TN,
+                    USA.</em>
+                <ul>
+                    <li>Thesis: <a
+                            href="https://trace.tennessee.edu/cgi/viewcontent.cgi?article=5503&context=utk_gradthes&httpsredir=1"
+                            target="_blank">A Mixed Integer Linear Programming Approach for Developing Salary
+                            Administration Systems</a></li>
+                    <li>Committee: <a href="https://tickle.utk.edu/ise/faculty/emeritus-faculty/alberto-garcia-diaz/"
+                            target="_blank">Alberto Garcia-Diaz</a> (advisor), <a
+                            href="https://experts.utk.edu/experts/john-kobza/" target="_blank">John Kobza</a>, <a
+                            href="https://tickle.utk.edu/ise/remembering-rupy-sawhney/" target="_blank">Rapinder
+                            Sawhney</a></li>
+                </ul>
+            </li>
+            <li>
+                <strong>B.S. in Business Administration</strong> (June 2012)<br>
+                <em><a href="https://www.nevsehir.edu.tr/en" target="_blank">Nevsehir University</a>, Türkiye.</em>
+            </li>
+        </ul>
+    </main>
 
-<footer>
-    <p>9700 South Cass Ave | Lemont, IL 60439 | (706)-308-1492</p>
-    <p>
-        <a href="https://linkedin.com/in/taner-cokyasar/" target="_blank">LinkedIn</a> | 
-        <a href="https://github.com/tcokyasar44" target="_blank">GitHub</a> | 
-        <a href="mailto:tcokyasar@anl.gov">tcokyasar@anl.gov</a>
-    </p>
-</footer>
+    <footer>
+        <p>9700 South Cass Ave | Lemont, IL 60439 | (706)-308-1492</p>
+        <p>
+            <a href="https://linkedin.com/in/taner-cokyasar/" target="_blank">LinkedIn</a> |
+            <a href="https://github.com/tcokyasar44" target="_blank">GitHub</a> |
+            <a href="https://scholar.google.com/citations?user=rZDwSd0AAAAJ&hl=en&oi=ao" target="_blank">Google
+                Scholar</a> |
+            <a href="https://orcid.org/0000-0001-9687-6725" target="_blank">ORCID</a> |
+            <a href="mailto:tcokyasar@anl.gov">tcokyasar@anl.gov</a>
+        </p>
+    </footer>
 
 </body>
+
 </html>
