Update resume link in index.html

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <li>Queueing theory</li>
         </ul>
         <p><strong><a
-                    href="https://www.dropbox.com/scl/fi/uo99x0u0tgzszcv4dgoag/TC_resume.pdf?rlkey=xsijo8txlzzwptpghtf748kj4&st=z5bqy4ig&dl=1"
+                    href="https://www.dropbox.com/scl/fi/z0y5qchvycfd21j4mkz2l/TC_resume.pdf?rlkey=33xy4hm4jeycmouqpoalp1ds5&st=bo286smz&dl=1"
                     target="_blank">View Resume</a></strong></p>
     </main>
 
