Update navigation links for consistency across multiple pages

--- a/teaching.html
+++ b/teaching.html
@@ -22,8 +22,8 @@
         <a href="teaching.html" class="active">Teaching</a>
         <a href="research.html">Research</a>
         <a href="publications.html">Publications</a>
-        <a href="service.html">Service and Awards</a>
-        <a href="advising.html">Advising & Mentorship</a>
+        <a href="service.html">Service & Awards</a>
+        <a href="advising.html" class="active">Advising</a>
     </nav>
 
     <main class="custom-layout">
