--- a/advising.html
+++ b/advising.html
@@ -22,8 +22,8 @@
     <a href="teaching.html">Teaching</a>
     <a href="research.html">Research</a>
     <a href="publications.html">Publications</a>
-    <a href="service.html">Service and Awards</a>
-    <a href="advising.html" class="active">Advising & Mentorship</a>
+    <a href="service.html">Service & Awards</a>
+    <a href="advising.html" class="active">Advising</a>
   </nav>
 
   <main class="custom-layout">
