--- a/research.html
+++ b/research.html
@@ -23,7 +23,7 @@
         <a href="research.html" class="active">Research</a>
         <a href="publications.html">Publications</a>
         <a href="service.html">Service & Awards</a>
-        <a href="advising.html" class="active">Advising</a>
+        <a href="advising.html">Advising</a>
     </nav>
 
     <main class="custom-layout">
