--- a/service.html
+++ b/service.html
@@ -22,8 +22,8 @@
         <a href="teaching.html">Teaching</a>
         <a href="research.html">Research</a>
         <a href="publications.html">Publications</a>
-        <a href="service.html" class="active">Service and Awards</a>
-        <a href="advising.html">Advising & Mentorship</a>
+        <a href="service.html" class="active">Service & Awards</a>
+        <a href="advising.html">Advising</a>
     </nav>
 
     <main class="custom-layout">
