Update education details with accurate degree dates in education.html

--- a/education.html
+++ b/education.html
@@ -31,7 +31,7 @@
 
         <ul class="styled-list">
             <li>
-                <strong>Ph.D. in Industrial Engineering</strong> (May 2020)<br>
+                <strong>Ph.D. in Industrial Engineering</strong> (January 2017 — May 2020)<br>
                 <em><a href="https://www.utk.edu/" target="_blank">The University of Tennessee</a>, Knoxville, TN,
                     USA.</em>
                 <ul>
@@ -48,7 +48,7 @@
                 </ul>
             </li>
             <li>
-                <strong>M.S. in Industrial Engineering</strong> (December 2016)<br>
+                <strong>M.S. in Industrial Engineering</strong> (August 2015 — December 2016)<br>
                 <em><a href="https://www.utk.edu/" target="_blank">The University of Tennessee</a>, Knoxville, TN,
                     USA.</em>
                 <ul>
@@ -64,7 +64,7 @@
                 </ul>
             </li>
             <li>
-                <strong>B.S. in Business Administration</strong> (June 2012)<br>
+                <strong>B.S. in Business Administration</strong> (September 2008 — June 2012)<br>
                 <em><a href="https://www.nevsehir.edu.tr/en" target="_blank">Nevsehir University</a>, Türkiye.</em>
             </li>
         </ul>
