Add meta description to multiple HTML pages for improved SEO

--- a/education.html
+++ b/education.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dr. Taner Cokyasar | Education</title>
+    <meta name="description"
+        content="Academic portfolio of Dr. Taner Cokyasar, Computational Transportation Engineer specializing in operations research, transportation systems modeling, and supply chain optimization.">
     <link rel="stylesheet" href="style.css">
 </head>
 
