--- a/publications.html
+++ b/publications.html
@@ -32,7 +32,7 @@
         <h1 style="text-align: center; border-bottom: none; margin-bottom: 30px;">Research Publications and
             Presentations</h1>
 
-        <h2>Journal Articles (*Corresponding Author)</h2>
+        <h2>Journal Articles</h2>
         <script
             src="https://bibbase.org/show?bib=https%3A%2F%2Fwww.dropbox.com%2Fscl%2Ffi%2Fr7a96oa7h2epkbtx9i3gj%2Fjournal_articles.bib%3Frlkey%3Di7n06rxxkldh5u4zx6jmlhqj9%26st%3Dpcgen67c%26dl%3D1&commas=true&noBootstrap=1&jsonp=1"></script>
 
